# tp-ga-poo

./: .gitignore  CMakeLists.txt  CODE_EXPLAIN.md  Inventario.cpp  Inventario.h  Item.cpp  Item.h  Jogo.cpp  Jogo.h  Lutador.cpp  Lutador.h  Mago.cpp  Mago.h  Monstro.cpp  Monstro.h  Personagem.cpp  Personagem.h  README.md  Tela.cpp  Tela.h  main.cpp  programa  programa.txt  programma.txt
cenas/: 1.txt  10.txt  11.txt  12.txt  13.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
jogos_salvos/: .txt  AA.txt  Lucca.txt  Monstro.cpp  Monstro.h  Pedro.txt  ff.txt  fssd.txt  ge.txt  gg.txt  ggg.txt  ggw.txt  gjgj.txt  l.txt  lllll.txt  lucas.txt  pedrinho.txt  te.txt  you.txt
